--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,14 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  justify-content:center;
+  align-items:center;
+  padding: 20px;
+
+}
+#root {
+  width: 30%;
 }
 
 code {
